# ember

./: CMakeLists.txt  README.md
lib/SDL_shadercross/: CMakeLists.txt
lib/SDL_shadercross/.github/workflows/: main.yml
lib/SDL_shadercross/build-scripts/: download-prebuilt-DirectXShaderCompiler.cmake
lib/SDL_shadercross/cmake/: sdl3-shadercross.pc.in
lib/SDL_shadercross/src/: SDL_shadercross.c  cli.c
src/assets/: asset.h  asset_collection.cpp  asset_collection.h  asset_manager.cpp  asset_manager.h  asset_watcher.cpp  asset_watcher.h
src/core/: common.h  handle.h  hash.h  logger.cpp  logger.h  pool.h  ring_buffer.h  time.cpp  time.h  uuid.cpp  uuid.h
src/ecs/: entity.cpp  entity.h  scene.cpp  scene.h  system.h  system_registry.h
src/graphics/: animation.h  batcher.cpp  batcher.h  blend_mode.cpp  blend_mode.h  buffer.h  color.cpp  color.h  draw_cmd.h  imgui_renderer.cpp  imgui_renderer.h  material.h  mesh.h  render_device.cpp  render_device.h  shader.h  sub_texture.h  target.cpp  target.h  texture.cpp  texture.h  vertex.h
src/graphics/enums/: blend_factor.h  blend_mask.h  blend_op.h  buffer_usage.h  clear_mask.h  cull_mode.h  depth_compare.h  index_format.h  sample_count.h  texture_filter.h  texture_format.h  texture_wrap.h  vertex_type.h
src/graphics/sdl/: render_device_sdl.cpp  render_device_sdl.h
src/input/: axes.h  bindings.cpp  bindings.h  buttons.h  controller.cpp  controller.h  input.cpp  input.h  keyboard.cpp  keyboard.h  keys.h  mouse.cpp  mouse.h  virtual_axis.cpp  virtual_axis.h  virtual_input.cpp  virtual_input.h  virtual_stick.cpp  virtual_stick.h
src/math/: math.h  quad.h  rect.h
src/platform/: application.cpp  application.h  window.cpp  window.h
